[project]
name = "machine-learning"
version = "0.1.0"
description = "This is just a sandbox to maintain my knowledge about several machine-learning packages."
readme = "README.md"
authors = [
    { name = "Jos van Nijnatten", email = "GitHub@vanNijnatten.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "keras>=3.10.0",
    "marimo[recommended]>=0.14.13",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pyspark>=4.0.0",
    "python-lsp-server>=1.13.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]

[project.scripts]
machine-learning = "machine_learning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
